Ensure data props are passed through and fixing button icon layout issue

--- a/src/BaseButton/BaseButton.module.css
+++ b/src/BaseButton/BaseButton.module.css
@@ -136,7 +136,7 @@ a.ControlButton:hover {
 
     svg {
       display: inline-block;
-      vertical-align: text-bottom;
+      vertical-align: bottom;
       overflow: visible;
     }
   }
